@@ -2078,7 +2078,7 @@ function inventory_market_prepare() {
 	var es_market_helper = document.createElement("script");
 	es_market_helper.type = "text/javascript";
 	es_market_helper.id = "es_market_helper";
-	es_market_helper.textContent = 'jQuery("#inventories").on("click", ".itemHolder, .newitem", function() { window.postMessage({ type: "es_sendmessage", information: [iActiveSelectView,g_ActiveInventory.selectedItem.marketable,g_ActiveInventory.appid,g_ActiveInventory.selectedItem.market_hash_name,g_ActiveInventory.selectedItem.market_fee_app,g_ActiveInventory.selectedItem.type] }, "*"); });';
+	es_market_helper.textContent = 'jQuery("#inventories").on("click", ".itemHolder, .newitem", function() { window.postMessage({ type: "es_sendmessage", information: [iActiveSelectView,g_ActiveInventory.selectedItem.marketable,g_ActiveInventory.appid,g_ActiveInventory.selectedItem.market_hash_name,g_ActiveInventory.selectedItem.market_fee_app,g_ActiveInventory.selectedItem.type,g_ActiveInventory.selectedItem.id] }, "*"); });';
 	document.documentElement.appendChild(es_market_helper);
 
 	window.addEventListener("message", function(event) {		
@@ -2092,6 +2092,7 @@ function inventory_market_helper(response) {
 	var global_id = response[2];
 	var hash_name = response[3];
 	var appid = response[4];
+	var assetID = response[6];
 	var gift = false;
 	if (response[5] && response[5].match(/Gift/)) gift = true;
 	var html;
@@ -2167,6 +2168,26 @@ function inventory_market_helper(response) {
 					});
 				}, 1000);
 			}
+			$("#es_quickgrind").remove();
+			$("#iteminfo" + item + "_item_scrap_actions").find("div:last").before("<div><a class='btn_small btn_green_white_innerfade' id='es_quickgrind' appid='" + appid + "'assetid='" + assetID + "'><span>1-Click turn into Gems...</span></div>");
+			$("#es_quickgrind").on("click", function() {
+				runInPageContext("function() { \
+					var rgAJAXParams = {\
+						sessionid: g_sessionID,\
+						appid: " + $(this).attr("appid") + ",\
+						assetid: " + $(this).attr("assetID") + ",\
+						contextid: 6\
+					};\
+					var strActionURL = g_strProfileURL + '/ajaxgetgoovalue/';\
+					$J.get( strActionURL, rgAJAXParams ).done( function( data ) {\
+						strActionURL = g_strProfileURL + '/ajaxgrindintogoo/';\
+						rgAJAXParams.goo_value_expected = data.goo_value;\
+						$J.post( strActionURL, rgAJAXParams).done( function( data ) {\
+							ReloadCommunityInventory();\
+						});\
+					});\
+				}");
+			});
 		}
 	}
 }
